fix double scrollbar problem

--- a/src/components/tiptap-templates/simple/simple-editor.scss
+++ b/src/components/tiptap-templates/simple/simple-editor.scss
@@ -57,7 +57,7 @@ body,
 .simple-editor-wrapper {
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .simple-editor-content-wrapper {
